added google calendar link for appt

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2>Schedule an Appointment</h2>
     <!-- Replace YOUR_GOOGLE_CALENDAR_URL below -->
     <iframe
-      src="YOUR_GOOGLE_CALENDAR_URL"
+      src="https://calendar.app.google/EEEtG8YExbNJjbQ39"
       width="100%"
       height="600"
       frameborder="0">
