--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Practice Name</title>
+  <title>EFT 2 GO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -37,7 +37,7 @@
 <body>
 
 <header>
-  <h1>Your Practice Name</h1>
+  <h1>EFT 2 Go</h1>
   <p>Professional Services</p>
 </header>
 
@@ -63,7 +63,7 @@
 </main>
 
 <footer>
-  © 2025 Your Practice Name
+  © 2025 EFT 2 Go
 </footer>
 
 </body>
