About update info

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
   <section>
     <h2>About</h2>
     <p>
-      Brief professional description of your practice, credentials, and
-      the services you provide.
+      Form 1 EFT service. SWIFT and EForms compliant. Servicing Houston and greater Houston areas. Book an appointment for a consultation. 
     </p>
   </section>
 
