--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: yellow;
+      background: #0f2a44;
       color: #333;
     }
     header {
