--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     header {
       background: #0f2a44;
-      color: white;
+      color: gold;
       padding: 1.5rem;
       text-align: center;
     }
